MCDawn 1.0.2.2
-CustomCommand struct removed, replaced with just an object array (object[]).

MCDawn 1.0.2.1
-Fixed startup update check for GUI users.
-Reduced startup lag for GUI users.
-Fixed /viewlikes timer on non-MySQL servers.
-Fixed yet another bug with the email usernames for levels.
-Fixed IRC colors bug when first letter of chat message right is a number.
-PushBall game mode is complete! It works similarly in a sense to CTF, use /pushball and /pushballteam to set up the game.
-New Commands
	-/waypoint <list/tp/add/del> [name] - Manages your waypoints (a waypoint is a location on the server that you can teleport to easily).
-Fixed various SQL table naming bugs.

MCDawn 1.0.2.0
-New Commands
	-/properties (/prop) <set/get> [property] [value] - Manages your server.properties file.
-Mini-Console window in GUI removed.
-Console (GUI and CLI) can now read Minecraft chat color codes. This is toggle-able.
-Default main level size for first startups is now 128/128/128.
-For custom commands and plugins, usage of &g/%g color code is encouraged, instead of the old Server.DefaultColor.
-Added colors for IRC to Minecraft (and vice versa).
-Fixed various IRCBot and GlobalChatBot bugs.
-Fixed various Console GUI bugs.
-In Console GUI, Errors tab has been changed to Logs/Errors tab.
-Map Viewer in Console GUI works as intended, no longer stretches or distorts size of images.
-Fixed MySQL database error for email usernames in zones.

MCDawn 1.0.1.9
-Updated Commands
	-/rules - Works as intended from Console.
	-/oprules - Works as intended from Console.
	-/kick - Modified kick messages.
	-/undo - Doesn't cause game crashes when used on players with long usernames anymore.
-New Commands
	-/like - "Like" a level.
	-/unlike - Undoes your like.
	-/viewlikes - Views how many likes have been given to a level.

MCDawn 1.0.1.7/8
-Critical update: Fixed bug with Name column in database.

MCDawn 1.0.1.6
-Updated Commands